# turtle-engine

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CHANGELOG.md  CMakeLists.txt  CMakeLists.txt.sample  CONTRIBUTING.md  CTestTestfile.cmake  DEMO_README.md  Doxyfile  INSTALL.vcxproj  INSTALL.vcxproj.filters  LICENSE  ParticleSystem.hpp  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  RenderTests.vcxproj  RenderTests.vcxproj.filters  SECURITY.md  TurtleEngine.sln  TurtleEngine.vcxproj  TurtleEngine.vcxproj.filters  TurtleEngineApp.vcxproj  TurtleEngineApp.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build-and-run-temporal-test.ps1  build-with-msvc.ps1  commit-changes.ps1  compile_ai_construct_test.ps1  compile_and_run_demo.ps1  compile_gesture_test.ps1  compile_plasma_weapon_test.ps1  compile_temporal_test.ps1  compile_test.bat  compile_test.ps1  complete_phase1_tests.ps1  final_tests.ps1  gesture_recognition_results.txt  (+24 more)
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build.yml  pr-validation.yml  release.yml
RenderTests.dir/Debug/: RenderTests.exe.recipe
RenderTests.dir/Debug/RenderTests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
TurtleEngine.dir/Debug/TurtleEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
TurtleEngineApp.dir/Debug/TurtleEngineApp.tlog/: CustomBuild.write.1.tlog
docs/: demo.md  dependencies.md  development-next-steps.md  pr-description.md  solo-dev-workflow.md  temporal_demo_documentation.md
docs/design/: gameplay.md  systems.md  ui-ux.md
docs/notifications/: version-control-update.md
docs/project/: README.md  flammyx_phase2_optimization.md  flammyx_validation.md  gesture_recognition_results.txt  roadmap.md  tasks.md  technical-specs.md
docs/technical/: api.md  architecture.md  combat.md  debug-visualization.md  performance.md  testing.md  workflow.md
docs/testing/: AutomatedRenderingCheck.md
mocks/: ParticleSystem.cpp  ParticleSystem.hpp  glm_defines.hpp
mocks/opencv2/: core.hpp  opencv.hpp
phase1_tests/: AIConstructTest.cpp  GestureRecognizerTest.cpp  HealthSystemTest.cpp  PlasmaWeaponTest.cpp  TemporalAnomalyTest.cpp  compile_aiconstruct.bat  compile_gesturerecognizer.bat  compile_healthsystem.bat  compile_plasmaweapon.bat  compile_temporal.bat  results_aiconstruct.txt  results_gesturerecognizer.txt  results_healthsystem.txt  results_plasmaweapon.txt  results_temporal.txt
shaders/: basic.frag  basic.vert  default.frag  flammyx.frag  flammyx.vert  lighting.frag  lighting.vert  particle.frag  particle.vert  shadow.frag  test.frag
src/: main.cpp
src/demos/: simple_temporal_demo.cpp  temporal_gesture_blaster.cpp  temporal_scene_demo.cpp
src/engine/: Renderer.cpp
src/engine/combat/include/: AIConstruct.hpp  Combo.hpp  HealthSystem.hpp  Hitbox.hpp  PlasmaWeapon.hpp
src/engine/combat/src/: AIConstruct.cpp  HealthSystem.cpp  PlasmaWeapon.cpp
src/engine/graphics/include/: ParticleSystem.hpp
src/engine/graphics/shaders/: particle.frag  particle.vert
src/engine/graphics/src/: ParticleSystem.cpp
src/engine/include/: Engine.hpp  GlmConfig.hpp  Grid.hpp  InputManager.hpp  ParticleSystem.hpp  Renderer.h  Renderer.hpp  Scene.h  Shader.h  Shader.hpp  VulkanEngine.hpp  Window.hpp
src/engine/include/combat/: Combo.hpp  Hitbox.hpp  VisualFeedback.hpp
src/engine/include/csl/: CSLSystem.hpp  GestureRecognizer.h  GestureRecognizer.hpp
src/engine/input/include/: GestureRecognizer.hpp
src/engine/input/src/: GestureRecognizer.cpp
src/engine/input/tests/: GestureTest.cpp
src/engine/src/: Engine.cpp  Grid.cpp  InputManager.cpp  ParticleSystem.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  VulkanEngine.cpp  Window.cpp
src/engine/src/combat/: Combo.cpp  Hitbox.cpp
src/engine/src/csl/: CSLSystem.cpp  CSLSystem.hpp  GestureRecognizer.cpp
src/engine/temporal/docs/: AnomalyCombinations.md
src/engine/temporal/include/: TemporalAnomalySystem.hpp  TemporalCollisionHandler.hpp  TemporalVisualizer.hpp
src/engine/temporal/src/: TemporalAnomalySystem.cpp  TemporalCollisionHandler.cpp  TemporalVisualizer.cpp
src/pch/: pch.h
src/tests/: CSLTest.cpp  CameraTest.cpp  GestureTest.cpp  GestureTest.hpp  GestureTestMain.cpp  TemporalAnomalyTest.cpp  TemporalCollisionTest.cpp  TurtleEngine_Tests.cpp  demo_script.txt  gesture_recognition_results.txt
src/tests/combat/: AIConstructTest.cpp  ComboTest.cpp  HealthSystemTest.cpp  HitboxTest.cpp  PlasmaWeaponTest.cpp
src/tests/graphics/: ParticleSystemTest.cpp
src/tests/include/: RenderTests.hpp
src/tests/src/: LightingTests.cpp  RenderTests.cpp
src/tests/standalone/: AIConstructStandaloneTest.cpp  CMakeLists.txt  GestureRecognizerStandaloneTest.cpp  HealthComponentStandaloneTest.cpp  HealthSystemTest.cpp  PlasmaWeaponStandaloneTest.cpp  SimplePlasmaWeaponTest.cpp  TemporalAnomalySystemStandaloneTest.cpp  test_results.txt
tests/: RenderTests.cpp
x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
